# dane-asr-worker

./: .dockerignore  .env  .gitignore  Dockerfile  Pipfile  README.md  api_util.py  asr.py  asr_service.py  base_config.yml  base_util.py  build-container.sh  codemeta.json  complicated_asr.py  config-k8s.yml  config-local-kaldi.yml  config.py  config_k8s.yml  config_test.yml  dane-worker-entrypoint.sh  dane-worker.Dockerfile  debug-container.sh  docker-compose-dane-worker.yml  docker-compose-kaldi-nl.yml  docker-compose.yml  docker-entrypoint.sh  download.py  io_util.py  k8s-cluster-requirements-local.yaml  k8s-cluster-requirements.yaml  k8s-dane-asr-local.yaml  k8s-dane-asr.yaml  k8s-kaldi_nl-separate-local.yaml  k8s-kaldi_nl-separate.yaml  k8s-private-registry-secret.yaml  kaldi-nl-s3.Dockerfile  kaldi-nl.env  kaldi_included.Dockerfile  kaldi_nl.py  main.py  (+15 more)
.github/: dependabot.yml
.github/workflows/: _build-and-push-ecr.yml  _build-push-cached-ecr.yml  _build-push-cached-ghcr.yml  _deploy.yml  _test.yml  aws-ecr-with-kaldi.yml  aws-ecr.yml  build.yml  main-branch.yml  manual-build-and-push-ecr.yml  not-main-branch.yml  pre-commit.yml
asr-debug-service/: server.py  settings.py
asr-debug-service/templates/: index.html
asr_api/: Dockerfile  README.md  asr.py  server.py  work_processor.py
asr_api/apis/process/: process_api.py
asr_api/config/: settings-example.py
k8s/: asr-worker-deploy.yml
lamachine/: Dockerfile
scripts/: check-project.sh  dane-batch-handler.py  dane_rmq_test.py  pre-commit-build.sh  runner.sh  safe-download-and-cmd-exec.py  start-container.sh
scripts/kubernetes/: README.md  create-configmaps.sh  dane-rabbitmq-ingress.yaml  dane-rabbitmq-server-pod.yaml  dane-rabbitmq-service.yaml  dane-server-pod.yaml  dane-speech-deployments.yaml  dane-speech-pod.yml  dane-speech-service.yml  dnsutils.yaml
src/: asr.py  asr_server.py  base_config.yml  dane_rmq_test.py  server.py  settings.py  transcode.py  work_processor.py  worker.py
src/apis/process/: process_api.py
src/docker_src/: asr.py  asr_indexer.py  server.py  settings-example.py  settings.py  work_processor.py
src/docker_src/apis/process/: process_api.py
src/scripts/: README.md
src/templates/: index.html
tests/: config-example.yml  end-to-end-test.py  es_handler.py  unit-test.sh
tests/data/asr_output/BG27239MPG_-HRE000033CB/: 1Best.ctm  1Best.txt
tests/unit/: base_util_test.py  conftest.py  io_util_test.py  output_cases.py  transcript_test.py  worker_test.py
tests/unit_tests/: base_util_test.py  worker_test.py
