[tool.poetry]
name = "dane-asr-worker"
version = "0.1.0"
description = "Automatic speech recognition through an external service. Depends on DANE-server"
authors = ["Jaap Blom <jblom@beeldengeluid.nl>", "Govert Brinkmann <gbrinkmann@beeldengeluid.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
DANE = "^0.3.0"
requests = "^2.28.1"
pika = "^1.2.0"
yacs = "^0.1.8"
elasticsearch = "7.17.4"
dane = "0.3.2"
elasticsearch7 = "7.17.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mockito = "^1.3.3"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
black = "^22.3.0"
mypy = "0.971"
types-requests = "2.28.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
]
addopts = [
  "--cov",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
  'dane.*',
  'mockito',
  'pika',
  'yaml',
  'yacs.*',
]
ignore_missing_imports = true
