[tool.poetry]
name = "dane-asr-worker"
version = "0.2.0"
description = "Automatic speech recognition with Kaldi_NL"
authors = ["Jaap Blom <jblom@beeldengeluid.nl>", "Govert Brinkmann <gbrinkmann@beeldengeluid.nl>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
boto3 = "^1.35.4"
validators = "^0.33.0"



[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
flake8 = "^7.1.1"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
]
addopts = [
  "--cov",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target_version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
    | data
  )/
)
'''

[tool.mypy]
python_version = "3.11"
exclude = "data"

[[tool.mypy.overrides]]
module = [
  'boto3.*'
]
ignore_missing_imports = true
